# site-health

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: usage.md
docs/plans/: 2025-11-18-core-web-vitals.md  2025-11-18-site-health-design.md  2025-11-18-site-health-implementation.md  2025-11-19-a11y-audit-design.md  2025-11-19-a11y-audit-implementation.md  2025-11-19-seo-audit-design.md  2025-11-19-seo-audit-implementation.md
site_health/: __init__.py  __main__.py  a11y.py  cli.py  config.py  crawler.py  database.py  models.py  performance.py  report.py  seo_analyzer.py
site_health/templates/: report.html
site_health/web/: __init__.py  app.py
site_health/web/static/: style.css
site_health/web/templates/: index.html
tests/: test_a11y.py  test_a11y_auditor.py  test_a11y_models.py  test_cli.py  test_config.py  test_crawler.py  test_crawler_seo.py  test_database.py  test_database_a11y.py  test_database_seo.py  test_database_vitals.py  test_integration_a11y.py  test_models.py  test_performance.py  test_report.py  test_report_a11y.py  test_report_vitals.py  test_seo_analyzer.py  test_seo_models.py  test_vitals_model.py  test_web.py
